[package]
authors = ["Pendulum Chain"]
edition = "2021"
name = "treasury-buyout-extension"
version = "1.1.0"

[dependencies]
codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }

# Substrate dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-arithmetic = { workspace = true }
pallet-treasury = { workspace = true }

frame-benchmarking = { workspace = true, optional = true }

orml-currencies = { workspace = true }
orml-traits = { workspace = true }
orml-tokens = { workspace = true }

spacewalk-primitives = { workspace = true }

[dev-dependencies]
frame-benchmarking = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
xcm = { workspace = true, default-features = true }

pallet-balances = { workspace = true, default-features = true }

spacewalk-primitives = { workspace = true }
runtime-common = { path = "../../runtime/common", default-features = false }

[features]
default = ["std"]
std = [
	"serde/std",
	"codec/std",
	"sha2/std",
	"sp-core/std",
	"sp-std/std",
	"sp-arithmetic/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"orml-currencies/std",
	"orml-tokens/std",
	"orml-traits/std",
	"frame-benchmarking/std",
	"pallet-balances/std",
	"pallet-treasury/std",
	"spacewalk-primitives/std",
	"xcm/std",
	"runtime-common/std",
	"scale-info/std"
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"runtime-common/runtime-benchmarks",
	"orml-tokens/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks"
]

try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"orml-currencies/try-runtime",
	"orml-tokens/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-treasury/try-runtime",
	"sp-runtime/try-runtime"
]
