[package]
authors = ["Pendulum"]
description = "A pallet to manage vesting schedules"
edition = "2021"
name = "vesting-manager"
version = "1.1.0"

[dependencies]
log = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, optional = true }
sp-api = {workspace = true }

frame-support = {workspace = true }
frame-system = {workspace = true }
pallet-vesting = {workspace = true }
sp-runtime = {workspace = true }
sp-std = {workspace = true }

# benchmarking
frame-benchmarking = { workspace = true, optional = true }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-vesting/runtime-benchmarks"
]
std = [
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "parity-scale-codec/std",
    "pallet-vesting/std",
    "scale-info/std",
    "serde/std",
    "sp-api/std",
    "sp-runtime/std",
    "sp-std/std",
]
try-runtime = [
    "frame-support/try-runtime",
]
